--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
             <div class="card auth-card">
                 <h2>🔐 Authentification</h2>
                 <div class="form-group">
-                    <label for="username">Identifiant</label>
+                    <label for="username">🔐 Identifiant</label>
                     <input type="text" id="username" placeholder="Votre identifiant">
                 </div>
                 <div class="form-group">
-                    <label for="accessCode">Code d'accès</label>
+                    <label for="accessCode">🔑 Code d'accès</label>
                     <input type="password" id="accessCode" placeholder="Votre code d'accès">
                 </div>
                 <div class="form-group" style="margin-top: 15px;">
@@ -118,12 +118,12 @@
             <div class="card">
                 <h2>👤 Informations du patient :</h2>
                 <div class="form-group">
-                    <label for="numeroDossier">Numéro de dossier <span style="color: var(--red);">*</span></label>
+                    <label for="numeroDossier">📝 Numéro de dossier <span style="color: var(--red);">*</span></label>
                     <input type="text" id="numeroDossier" maxlength="50" placeholder="Numéro de dossier (max 50 caractères)" required>
                     <span class="char-counter" id="numeroDossierCounter">0/50</span>
                 </div>
                 <div class="form-group">
-                    <label for="nomPatient">Nom complet du patient</label>
+                    <label for="nomPatient">👤 Nom complet du patient</label>
                     <input type="text" id="nomPatient" maxlength="50" placeholder="Nom complet (max 50 caractères)">
                     <span class="char-counter" id="nomPatientCounter">0/50</span>
                 </div>
@@ -150,7 +150,7 @@
             </div>
 
             <div class="recording-section" data-section="partie2">
-                <h3>🏥 Partie 2</h3>
+                <h3>📋 Partie 2</h3>
                 <div class="recording-controls">
                     <div class="status-info">
                         <span class="status-badge" data-status="ready">Prêt</span>
@@ -169,7 +169,7 @@
             </div>
 
             <div class="recording-section" data-section="partie3">
-                <h3>🏥 Partie 3</h3>
+                <h3>📋 Partie 3</h3>
                 <div class="recording-controls">
                     <div class="status-info">
                         <span class="status-badge" data-status="ready">Prêt</span>
