--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             
             <div class="card">
                 <h2>Commander DictaMed</h2>
-                <p>📧 <strong>Email :</strong> <a href="mailto:DictaMed.SPSS@gmail.com">DictaMed.SPSS@gmail.com</a></p>
+                <p>📧 <strong>Email :</strong> <a href="/cdn-cgi/l/email-protection#c084a9a3b4a18da5a4ee9390939380a7ada1a9aceea3afad"><span class="__cf_email__" data-cfemail="84c0ede7f0e5c9e1e0aad7d4d7d7c4e3e9e5ede8aae7ebe9">[email&#160;protected]</span></a></p>
                 <p>📘 <strong>Facebook :</strong> <a href="https://www.facebook.com/DictaMed.SPSS" target="_blank">DictaMed.SPSS</a></p>
                 <p class="info-box">💰 Tarification personnalisée selon le nombre de patients et de variables à collecter.</p>
             </div>
@@ -450,7 +450,7 @@
 
                 <div class="faq-item">
                     <h3>6. Comment obtenir un devis ?</h3>
-                    <p>Contactez-nous par email à DictaMed.SPSS@gmail.com en fournissant les informations listées dans l'onglet Contact. Nous vous répondrons sous 48 heures ouvrées avec un devis personnalisé adapté à vos besoins.</p>
+                    <p>Contactez-nous par email à <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5b1f32382f3a163e3f75080b08081b3c363a323775383436">[email&#160;protected]</a> en fournissant les informations listées dans l'onglet Contact. Nous vous répondrons sous 48 heures ouvrées avec un devis personnalisé adapté à vos besoins.</p>
                 </div>
 
                 <div class="faq-item">
@@ -484,9 +484,21 @@
             <div class="card solution-card">
                 <h2>🎉 Bienvenue dans le Mode Test !</h2>
                 <p style="font-size: 1.1em; line-height: 1.8;">Testez gratuitement DictaMed avec des données fictives. Aucune inscription requise !</p>
-                <div class="info-box" style="margin-top: 20px;">
-                    <strong>📊 Résultats en temps réel :</strong> Consultez la transcription immédiate de vos dictées dans le Google Sheet public : 
-                    <a href="https://docs.google.com/spreadsheets/d/1ReZHjndHc6o8O1bx1OfZXnZ8HWt8nLSo2X7IS6rcZXE/edit" target="_blank" class="google-sheet-link">📊 Voir le Google Sheet</a>
+                <div class="info-box enhanced-realtime-box" style="margin-top: 20px; background: linear-gradient(135deg, #f0f9ff 0%, #ecfdf5 100%); border: 2px solid #3b82f6; border-radius: 12px; padding: 20px; position: relative; overflow: hidden;">
+                    <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 15px;">
+                        <span style="font-size: 1.8em;">📊</span>
+                        <div>
+                            <h3 style="margin: 0; color: #1e40af; font-size: 1.2em; font-weight: 700;">Résultats en temps réel</h3>
+                            <p style="margin: 5px 0 0 0; color: #1e40af; font-size: 1em; font-weight: 500;">Transcription immédiate dans Google Sheets</p>
+                        </div>
+                    </div>
+                    <p style="margin: 0 0 15px 0; color: #374151; line-height: 1.6; font-size: 1.05em;">Vos dictées médicales sont automatiquement transcrites et publiées en temps réel dans notre Google Sheet public pour consultation immédiate :</p>
+                    <a href="https://docs.google.com/spreadsheets/d/1ReZHjndHc6o8O1bx1OfZXnZ8HWt8nLSo2X7IS6rcZXE/edit" target="_blank" class="google-sheet-link" style="display: inline-flex; align-items: center; gap: 10px; background: linear-gradient(135deg, #10b981 0%, #059669 100%); color: white; padding: 12px 20px; border-radius: 8px; text-decoration: none; font-weight: 600; font-size: 1.1em; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(16, 185, 129, 0.3);">
+                        <span style="font-size: 1.3em;">📊</span>
+                        <span>Ouvrir le Google Sheet Public</span>
+                        <span style="margin-left: 5px;">↗</span>
+                    </a>
+                    <div style="position: absolute; top: -20px; right: -20px; width: 60px; height: 60px; background: linear-gradient(135deg, #3b82f6, #10b981); opacity: 0.1; border-radius: 50%;"></div>
                 </div>
             </div>
             
@@ -694,10 +706,10 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 DictaMed - Tous droits réservés | Contact : <a href="mailto:DictaMed.SPSS@gmail.com">DictaMed.SPSS@gmail.com</a></p>
+            <p>&copy; 2025 DictaMed - Tous droits réservés | Contact : <a href="/cdn-cgi/l/email-protection#b8fcd1dbccd9f5dddc96ebe8ebebf8dfd5d9d1d496dbd7d5"><span class="__cf_email__" data-cfemail="f7b39e948396ba9293d9a4a7a4a4b7909a969e9bd994989a">[email&#160;protected]</span></a></p>
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="script.js"></script>
 </body>
 </html>
