--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
     <nav class="tabs-nav" role="navigation" aria-label="Navigation principale">
         <div class="swipe-hint">👉 Faites glisser pour voir plus</div>
         <div class="tabs-container">
-            <button class="tab-btn active" data-tab="mode-normal" aria-selected="true">Mode Normal</button>
-            <button class="tab-btn" data-tab="guide" aria-selected="false">Guide</button>
-            <button class="tab-btn" data-tab="contact" aria-selected="false">Contact</button>
-            <button class="tab-btn" data-tab="faq" aria-selected="false">FAQ</button>
-            <button class="tab-btn" data-tab="mode-test" aria-selected="false">Mode Test</button>
-            <button class="tab-btn" data-tab="mode-dmi" aria-selected="false">Mode DMI</button>
+            <button class="tab-btn active" data-tab="mode-normal" aria-selected="true"><span class="tab-icon">📝</span>Mode Normal</button>
+            <button class="tab-btn" data-tab="guide" aria-selected="false"><span class="tab-icon">📖</span>Guide</button>
+            <button class="tab-btn" data-tab="contact" aria-selected="false"><span class="tab-icon">📧</span>Contact</button>
+            <button class="tab-btn" data-tab="faq" aria-selected="false"><span class="tab-icon">❓</span>FAQ</button>
+            <button class="tab-btn" data-tab="mode-test" aria-selected="false"><span class="tab-icon">🧪</span>Mode Test</button>
+            <button class="tab-btn" data-tab="mode-dmi" aria-selected="false"><span class="tab-icon">🩺</span>Mode DMI</button>
         </div>
     </nav>
 
