--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
                     </div>
                     <p class="slogan">Où la voix rencontre les chiffres</p>
                 </div>
-                <button class="btn-install-pwa hidden" id="installPwaBtn">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <button class="btn-install-pwa ultra-discrete" id="installPwaBtn" title="Installer DictaMed">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                         <polyline points="7 10 12 15 17 10"></polyline>
                         <line x1="12" y1="15" x2="12" y2="3"></line>
                     </svg>
-                    Installer l'app
                 </button>
             </div>
         </div>
