--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             
             <div class="card">
                 <h2>Commander DictaMed</h2>
-                <p>📧 <strong>Email :</strong> <a href="/cdn-cgi/l/email-protection#c084a9a3b4a18da5a4ee9390939380a7ada1a9aceea3afad"><span class="__cf_email__" data-cfemail="84c0ede7f0e5c9e1e0aad7d4d7d7c4e3e9e5ede8aae7ebe9">[email&#160;protected]</span></a></p>
+                <p>📧 <strong>Email :</strong> <a href="><span class="__cf_email__" data-cfemail="DictaMed.SPSS@gmail.Com">DictaMed.SPSS@gmail.Com</span></a></p>
                 <p>📘 <strong>Facebook :</strong> <a href="https://www.facebook.com/DictaMed.SPSS" target="_blank">DictaMed.SPSS</a></p>
                 <p class="info-box">💰 Tarification personnalisée selon le nombre de patients et de variables à collecter.</p>
             </div>
