--- a/index.html
+++ b/index.html
@@ -391,7 +391,12 @@
             
             <div class="card">
                 <h2>Commander DictaMed</h2>
-                <p>📧 <strong>Email :</strong> <a href="><span class="__cf_email__" data-cfemail="DictaMed.SPSS@gmail.Com">DictaMed.SPSS@gmail.Com</span></a></p>
+                <p>📧 <strong>Email :</strong> 
+   <a href="mailto:DictaMed.SPSS@gmail.com">
+       DictaMed.SPSS@gmail.com
+   </a>
+</p>
+>
                 <p>📘 <strong>Facebook :</strong> <a href="https://www.facebook.com/DictaMed.SPSS" target="_blank">DictaMed.SPSS</a></p>
                 <p class="info-box">💰 Tarification personnalisée selon le nombre de patients et de variables à collecter.</p>
             </div>
