--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                 </div>
                 <div class="form-group">
                     <label for="nomPatientTest">nom &amp; prénom</label>
-                    <input type="text" id="nomPatientTest" maxlength="50" placeholder="Ex: ben saleh kamel">
+                    <input type="text" id="nomPatientTest" maxlength="50" placeholder="Ex:Flen ben Foulen">
                     <span class="char-counter" id="nomPatientTestCounter">0/50</span>
                 </div>
             </div>
@@ -561,7 +561,7 @@
             <!-- Sections d'enregistrement -->
             <div class="recording-section" data-section="clinique">
                 <h3>📋 Données Cliniques</h3>
-                <p class="section-description">Âge, sexe, BMI, tabac</p>
+                <p class="section-description">Dicter ses variables : Âge, sexe, BMI, tabac</p>
                 <div class="recording-controls">
                     <div class="status-info">
                         <span class="status-badge" data-status="ready">Prêt</span>
@@ -581,7 +581,7 @@
 
             <div class="recording-section" data-section="antecedents">
                 <h3>🏥 Antécédents</h3>
-                <p class="section-description">HTA, DT2, DYSLIPIDEMIE, AVC</p>
+                <p class="section-description">Dicter ses variables :HTA, DT2, DYSLIPIDEMIE, AVC</p>
                 <div class="recording-controls">
                     <div class="status-info">
                         <span class="status-badge" data-status="ready">Prêt</span>
@@ -601,7 +601,7 @@
 
             <div class="recording-section" data-section="biologie">
                 <h3>🧪 Biologie</h3>
-                <p class="section-description">Hémoglobine, globules blancs, plaquettes, ionogramme complet( sodium , potassium, chlore)</p>
+                <p class="section-description">Dicter ses variables : Hémoglobine, globules blancs, plaquettes, ionogramme complet( sodium , potassium, chlore)</p>
                 <div class="recording-controls">
                     <div class="status-info">
                         <span class="status-badge" data-status="ready">Prêt</span>
