--- a/index.html
+++ b/index.html
@@ -447,9 +447,15 @@
                 </div>
 
                 <div class="faq-item">
-                    <h3>6. Comment obtenir un devis ?</h3>
-                    <p>Contactez-nous par email à <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5b1f32382f3a163e3f75080b08081b3c363a323775383436">[email&#160;protected]</a> en fournissant les informations listées dans l'onglet Contact. Nous vous répondrons sous 48 heures ouvrées avec un devis personnalisé adapté à vos besoins.</p>
-                </div>
+    <h3>6. Comment obtenir un devis ?</h3>
+    <p>
+        Contactez-nous par email à 
+        <a href="mailto:DictaMed.SPSS@gmail.com">DictaMed.SPSS@gmail.com</a> 
+        en fournissant les informations listées dans l'onglet Contact. 
+        Nous vous répondrons sous 48 heures ouvrées avec un devis personnalisé adapté à vos besoins.
+    </p>
+</div>
+
 
                 <div class="faq-item">
                     <h3>7. Quelle est la précision de la transcription ?</h3>
