--- a/index.html
+++ b/index.html
@@ -708,11 +708,15 @@
         </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 DictaMed - Tous droits réservés | Contact : <a href="/cdn-cgi/l/email-protection#b8fcd1dbccd9f5dddc96ebe8ebebf8dfd5d9d1d496dbd7d5"><span class="__cf_email__" data-cfemail="f7b39e948396ba9293d9a4a7a4a4b7909a969e9bd994989a">[email&#160;protected]</span></a></p>
-        </div>
-    </footer>
+   <footer>
+    <div class="container">
+        <p>
+            &copy; 2025 DictaMed - Tous droits réservés | 
+            Contact : <a href="mailto:DictaMed.SPSS@gmail.com">DictaMed.SPSS@gmail.com</a>
+        </p>
+    </div>
+</footer>
+
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="script.js"></script>
 </body>
