--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                 <p class="info-box" style="display: inline-block; margin-bottom: 20px;">
                     ⚠️ Le numéro de dossier est <strong>obligatoire</strong> pour envoyer les données.
                 </p>
-                <button class="btn btn-submit" id="submitTexte" disabled style="opacity: 0.5; cursor: not-allowed;">Envoyer les données (bientôt disponible)</button>
+                <button class="btn btn-submit" id="submitTexte" type="button" style="opacity: 1; cursor: pointer;">Envoyer les données (bientôt disponible)</button>
             </div>
         </section>
     </main>
