--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                 <h2>Informations Patient</h2>
                 <div class="form-group">
                     <label for="numeroDossierTexte">Numéro de dossier <span style="color: var(--red);">*</span></label>
-                    <input type="text" id="numeroDossierTexte" maxlength="50" placeholder="Ex: 14/2024" required>
+                    <input type="text" id="numeroDossier" maxlength="50" placeholder="Ex: 14/2024" required>
                     <span class="char-counter" id="numeroDossierTexteCounter">0/50</span>
                 </div>
                 <div class="form-group">
