--- a/index.html
+++ b/index.html
@@ -662,9 +662,9 @@
             <div class="card">
                 <h2>Informations Patient</h2>
                 <div class="form-group">
-                    <label for="numeroDossierTexte">Numéro de dossier <span style="color: var(--red);">*</span></label>
+                    <label for="numeroDossier">Numéro de dossier <span style="color: var(--red);">*</span></label>
                     <input type="text" id="numeroDossier" maxlength="50" placeholder="Ex: 14/2024" required>
-                    <span class="char-counter" id="numeroDossierTexteCounter">0/50</span>
+                    <span class="char-counter" id="numeroDossierCounter">0/50</span>
                 </div>
                 <div class="form-group">
                     <label for="nomPatientTexte">Nom complet du patient</label>
