--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <button class="tab-btn" data-tab="contact" aria-selected="false"><span class="tab-icon">📧</span>Contact</button>
             <button class="tab-btn" data-tab="faq" aria-selected="false"><span class="tab-icon">❓</span>FAQ</button>
             <button class="tab-btn" data-tab="mode-test" aria-selected="false"><span class="tab-icon">🧪</span>Mode Test</button>
-            <button class="tab-btn" data-tab="mode-dmi" aria-selected="false"><span class="tab-icon">🩺</span>Mode DMI</button>
+            <button class="tab-btn" data-tab="mode-dmi" aria-selected="false"><span class="tab-icon">📝</span>Mode DMI</button>
         </div>
     </nav>
 
@@ -392,8 +392,8 @@
             <div class="card">
                 <h2>Commander DictaMed</h2>
                 <p>📧 <strong>Email :</strong> 
-   <a href="mailto:DictaMed.SPSS@gmail.com">
-       DictaMed.SPSS@gmail.com
+   <a href="/cdn-cgi/l/email-protection#17537e7463765a7273394447444457707a767e7b3974787a">
+       <span class="__cf_email__" data-cfemail="bafed3d9cedbf7dfde94e9eae9e9faddd7dbd3d694d9d5d7">[email&#160;protected]</span>
    </a>
 </p>
 >
@@ -450,7 +450,7 @@
     <h3>6. Comment obtenir un devis ?</h3>
     <p>
         Contactez-nous par email à 
-        <a href="mailto:DictaMed.SPSS@gmail.com">DictaMed.SPSS@gmail.com</a> 
+        <a href="/cdn-cgi/l/email-protection#0f4b666c7b6e426a6b215c5f5c5c4f68626e6663216c6062"><span class="__cf_email__" data-cfemail="bcf8d5dfc8ddf1d9d892efecefeffcdbd1ddd5d092dfd3d1">[email&#160;protected]</span></a> 
         en fournissant les informations listées dans l'onglet Contact. 
         Nous vous répondrons sous 48 heures ouvrées avec un devis personnalisé adapté à vos besoins.
     </p>
@@ -662,14 +662,14 @@
             <div class="card">
                 <h2>Informations Patient</h2>
                 <div class="form-group">
-                    <label for="numeroDossier">Numéro de dossier <span style="color: var(--red);">*</span></label>
-                    <input type="text" id="numeroDossier" maxlength="50" placeholder="Ex: 14/2024" required>
-                    <span class="char-counter" id="numeroDossierCounter">0/50</span>
+                    <label for="numeroDossierDMI">Numéro de dossier <span style="color: var(--red);">*</span></label>
+                    <input type="text" id="numeroDossierDMI" maxlength="50" placeholder="Ex: 14/2024" required>
+                    <span class="char-counter" id="numeroDossierDMICounter">0/50</span>
                 </div>
                 <div class="form-group">
-                    <label for="nomPatientTexte">Nom complet du patient</label>
-                    <input type="text" id="nomPatientTexte" maxlength="100" placeholder="Nom complet (optionnel)">
-                    <span class="char-counter" id="nomPatientTexteCounter">0/100</span>
+                    <label for="nomPatientDMI">Nom complet du patient</label>
+                    <input type="text" id="nomPatientDMI" maxlength="100" placeholder="Nom complet (optionnel)">
+                    <span class="char-counter" id="nomPatientDMICounter">0/100</span>
                 </div>
             </div>
 
@@ -703,7 +703,7 @@
                 <p class="info-box" style="display: inline-block; margin-bottom: 20px;">
                     ⚠️ Le numéro de dossier est <strong>obligatoire</strong> pour envoyer les données.
                 </p>
-                <button class="btn btn-submit" id="submitTexte" type="button" style="opacity: 1; cursor: pointer;">Envoyer les données (bientôt disponible)</button>
+                <button class="btn btn-submit" id="submitDMI">Envoyer les données DMI</button>
             </div>
         </section>
     </main>
@@ -712,12 +712,12 @@
     <div class="container">
         <p>
             &copy; 2025 DictaMed - Tous droits réservés | 
-            Contact : <a href="mailto:DictaMed.SPSS@gmail.com">DictaMed.SPSS@gmail.com</a>
+            Contact : <a href="/cdn-cgi/l/email-protection#5a1e33392e3b173f3e74090a09091a3d373b333674393537"><span class="__cf_email__" data-cfemail="abefc2c8dfcae6cecf85f8fbf8f8ebccc6cac2c785c8c4c6">[email&#160;protected]</span></a>
         </p>
     </div>
 </footer>
 
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="script.js"></script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="script.js"></script>
 </body>
 </html>
