--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                 <p class="info-box" style="display: inline-block; margin-bottom: 20px;">
                     ⚠️ Le numéro de dossier est <strong>obligatoire</strong> pour envoyer les données.
                 </p>
-                <button class="btn btn-submit" id="submitDMI">Envoyer les données DMI</button>
+                <button class="btn btn-submit" id="submitDMI">Envoyer les données DMI ( non encore disponible)</button>
             </div>
         </section>
     </main>
