--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -6,9 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description"
-        content="Solution de dictée médicale intelligente pour la collecte de données et création de fichiers SPSS">
-    <meta name="keywords" content="dictée médicale, SPSS, enregistrement vocal, transcription médicale, DictaMed">
+        content="DictaMed transforme votre dictée vocale en données SPSS structurées. Gagnez 70% de temps avec notre IA médicale spécialisée. Précision >95%. Conforme RGPD.">
+    <meta name="keywords"
+        content="dictée médicale, SPSS, enregistrement vocal, transcription médicale, DictaMed, collecte données médicales, recherche médicale, IA médicale">
     <meta name="author" content="DictaMed">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://dictamed.com">
     <meta name="theme-color" content="#2563eb" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#1e40af" media="(prefers-color-scheme: dark)">
     <meta name="mobile-web-app-capable" content="yes">
@@ -21,39 +25,28 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="DictaMed - Dictée Médicale Intelligente">
     <meta property="og:description"
-        content="Solution de dictée médicale intelligente pour la collecte de données et création de fichiers SPSS">
-    <meta property="og:image" content="/icon-512x512.png">
+        content="Transformez votre voix en données SPSS. Économisez 70% de temps avec notre IA médicale. Précision >95%.">
+    <meta property="og:image" content="https://dictamed.com/icon-512x512.png">
     <meta property="og:url" content="https://dictamed.com">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="DictaMed">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="DictaMed - Dictée Médicale Intelligente">
-    <meta name="twitter:description" content="Solution de dictée médicale intelligente pour la collecte de données">
-    <meta name="twitter:image" content="/icon-512x512.png">
+    <meta name="twitter:description" content="Transformez votre voix en données SPSS. Économisez 70% de temps.">
+    <meta name="twitter:image" content="https://dictamed.com/icon-512x512.png">
 
     <title>DictaMed - Où la voix rencontre les chiffres</title>
 
     <!-- Stylesheet -->
+    <link rel="preload" href="style.css" as="style">
     <link rel="stylesheet" href="style.css">
 
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='grad1' x1='0%25' y1='0%25' x2='100%25' y2='100%25'><stop offset='0%25' style='stop-color:%232563eb;stop-opacity:1'/><stop offset='100%25' style='stop-color:%231e40af;stop-opacity:1'/></linearGradient><linearGradient id='grad2' x1='0%25' y1='0%25' x2='100%25' y2='100%25'><stop offset='0%25' style='stop-color:%2310b981;stop-opacity:1'/><stop offset='100%25' style='stop-color:%23059669;stop-opacity:1'/></linearGradient></defs><text x='10' y='75' font-size='70' font-weight='bold' font-family='Arial, sans-serif'><tspan fill='url(%23grad1)'>D</tspan><tspan fill='url(%23grad2)'>M</tspan></text></svg>">
 
-    <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="icon-128x128.png">
-
-    <!-- Android Chrome Icons -->
-    <link rel="icon" type="image/png" sizes="192x192" href="icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="icon-512x512.png">
-</head>
-
-<body>
-    <!-- Skip link pour accessibilité -->
-    <a href="#main-content" class="skip-link">Aller au contenu principal</a>
 
     <!-- Header -->
     <header role="banner">
@@ -97,18 +90,24 @@
                 <h2>🔐 Authentification</h2>
                 <div class="form-group">
                     <label for="username">🔐 Identifiant</label>
-                    <input type="text" id="username" placeholder="Votre identifiant" autocomplete="username">
+                    <input type="text" id="username" placeholder="Votre identifiant" autocomplete="username"
+                        aria-required="true" aria-describedby="username-hint">
+                    <span id="username-hint" class="sr-only">Entrez votre identifiant fourni par DictaMed</span>
                 </div>
                 <div class="form-group">
                     <label for="accessCode">🔑 Code d'accès</label>
                     <input type="password" id="accessCode" placeholder="Votre code d'accès"
-                        autocomplete="current-password">
+                        autocomplete="current-password" aria-required="true" aria-describedby="accessCode-hint">
+                    <span id="accessCode-hint" class="sr-only">Entrez votre code d'accès sécurisé</span>
                 </div>
                 <div class="form-group" style="margin-top: 15px;">
                     <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
-                        <input type="checkbox" id="rememberAuth" style="width: auto; cursor: pointer;">
-                        <span>💾 Enregistrer mezezzez informations d'authentification</span>
+                        <input type="checkbox" id="rememberAuth" style="width: auto; cursor: pointer;"
+                            aria-describedby="remember-hint">
+                        <span>💾 Enregistrer mes informations d'authentification</span>
                     </label>
+                    <span id="remember-hint" class="sr-only">Vos identifiants seront stockés localement de manière
+                        sécurisée</span>
                 </div>
             </div>
 
@@ -116,15 +115,19 @@
             <div class="card">
                 <h2>👤 Informations du patient :</h2>
                 <div class="form-group">
-                    <label for="numeroDossier">📝 Numéro de dossier <span class="required">*</span></label>
+                    <label for="numeroDossier">📝 Numéro de dossier <span class="required"
+                            aria-label="obligatoire">*</span></label>
                     <input type="text" id="numeroDossier" maxlength="50"
-                        placeholder="Numéro de dossier (max 50 caractères)" required>
-                    <span class="char-counter" id="numeroDossierCounter">0/50</span>
+                        placeholder="Numéro de dossier (max 50 caractères)" required aria-required="true"
+                        aria-describedby="numeroDossierCounter numeroDossier-hint">
+                    <span class="char-counter" id="numeroDossierCounter" aria-live="polite">0/50</span>
+                    <span id="numeroDossier-hint" class="sr-only">Champ obligatoire, maximum 50 caractères</span>
                 </div>
                 <div class="form-group">
                     <label for="nomPatient">👤 Nom complet du patient</label>
-                    <input type="text" id="nomPatient" maxlength="50" placeholder="Nom complet (max 50 caractères)">
-                    <span class="char-counter" id="nomPatientCounter">0/50</span>
+                    <input type="text" id="nomPatient" maxlength="50" placeholder="Nom complet (max 50 caractères)"
+                        autocomplete="name" aria-describedby="nomPatientCounter">
+                    <span class="char-counter" id="nomPatientCounter" aria-live="polite">0/50</span>
                 </div>
             </div>
 
@@ -212,8 +215,14 @@
 
             <!-- Envoi des données -->
             <div class="submit-section">
-                <p class="sections-count" data-mode="normal">0 section(s) enregistrée(s)</p>
-                <button class="btn btn-submit" id="submitNormal" disabled>Envoyer les données</button>
+                <p class="sections-count" data-mode="normal" aria-live="polite" aria-atomic="true">0 section(s)
+                    enregistrée(s)</p>
+                <button class="btn btn-submit" id="submitNormal" disabled
+                    aria-label="Envoyer les données enregistrées au serveur" aria-describedby="submit-hint">
+                    Envoyer les données
+                </button>
+                <span id="submit-hint" class="sr-only">Le bouton sera actif une fois qu'au moins une section sera
+                    enregistrée</span>
             </div>
         </section>
 
@@ -665,8 +674,13 @@
 
             <!-- Envoi des données -->
             <div class="submit-section">
-                <p class="sections-count" data-mode="test">0 section(s) enregistrée(s)</p>
-                <button class="btn btn-submit" id="submitTest" disabled>Envoyer les données Test</button>
+                <p class="sections-count" data-mode="test" aria-live="polite" aria-atomic="true">0 section(s)
+                    enregistrée(s)</p>
+                <button class="btn btn-submit" id="submitTest" disabled
+                    aria-label="Envoyer les données de test au serveur" aria-describedby="submit-test-hint">
+                    Envoyer les données Test
+                </button>
+                <span id="submit-test-hint" class="sr-only">Version de démonstration gratuite</span>
             </div>
         </section>
 
@@ -752,7 +766,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
-</body>
+    <script src="script.js" defer></script>
+    </body>
 
 </html>
